# mem-check

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  cuda_example.cu  leak_example.cc  stl_example.cc
include/: addr2sym.hpp  alloc-action.hpp  plot-actions.hpp
src/: mem-check.cc  mem-hook.cc  plot-actions.cc
test/: CMakeLists.txt  test_addr2sym.cc  test_main.cc
